--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/54/GitHub_Logo.png" alt="GITHUB">
 
+    <h2>Hola Mundo</h2>
   </body>
 </html>
